--- a/distribution/kernel/pom.xml
+++ b/distribution/kernel/pom.xml
@@ -456,12 +456,12 @@
         <dependency>
             <groupId>org.apache.servicemix.specs</groupId>
             <artifactId>org.apache.servicemix.specs.jaxb-api-2.3</artifactId>
-            <version>2.3_3</version>
+            <version>${servicemix.specs.jaxb.version}</version>
         </dependency>
         <dependency>
             <groupId>org.apache.servicemix.bundles</groupId>
             <artifactId>org.apache.servicemix.bundles.jaxb-runtime</artifactId>
-            <version>2.3.2_2</version>
+            <version>${servicemix.bundles.jaxb.version}</version>
         </dependency>
     </dependencies>
 </project>
