--- a/pom.xml
+++ b/pom.xml
@@ -152,17 +152,16 @@
         <apache.shiro.version>1.6.0</apache.shiro.version>
         <asm.version>8.0.1</asm.version>
         <awaitility.version>3.1.5</awaitility.version>
-        <aws-java-sdk-bundle.version>1.11.344_1</aws-java-sdk-bundle.version>
         <bouncy.version>1.66</bouncy.version>
-        <c3p0.version>0.9.5.4</c3p0.version>
+        <c3p0.version>0.9.5.5</c3p0.version>
         <cal10n.version>0.8.1</cal10n.version>
         <cal10n.thirdparty.bundle.version>${cal10n.version}_1</cal10n.thirdparty.bundle.version>
-        <camel.version>2.24.2</camel.version>
+        <camel.version>3.4.4</camel.version>
         <cesium.version>1.34</cesium.version>
         <commons-compress.version>1.20</commons-compress.version>
         <commons.fileupload.version>1.3.3</commons.fileupload.version>
         <commons-beanutils.version>1.9.4</commons-beanutils.version>
-        <commons-codec.version>1.14</commons-codec.version>
+        <commons-codec.version>1.15</commons-codec.version>
         <commons-collections.version>3.2.2</commons-collections.version>
         <commons-collections4.version>4.1</commons-collections4.version>
         <commons-configuration.version>1.10</commons-configuration.version>
@@ -170,7 +169,7 @@
         <commons-csv.version>1.4</commons-csv.version>
         <commons-digester.version>1.8.1</commons-digester.version>
         <commons-exec.version>1.3</commons-exec.version>
-        <commons-io.version>2.6</commons-io.version>
+        <commons-io.version>2.7</commons-io.version>
         <commons-lang.version>2.6</commons-lang.version>
         <commons-lang3.version>3.11</commons-lang3.version>
         <commons-logging.version>1.2</commons-logging.version>
@@ -226,7 +225,7 @@
         <jgroups.version>3.6.13.Final</jgroups.version>
         <joda-convert.version>1.7</joda-convert.version>
         <jodah-failsafe.version>0.9.5</jodah-failsafe.version>
-        <joda-time.version>2.10.3</joda-time.version>
+        <joda-time.version>2.10.6</joda-time.version>
         <johnzon.version>0.9.5</johnzon.version>
         <jpeg2000.version>1.3.1_CODICE_3</jpeg2000.version>
         <json-simple.version>1.1.1</json-simple.version>
@@ -278,9 +277,9 @@
         <pdfbox.version>2.0.19</pdfbox.version>
         <poi.version>4.1.2</poi.version>
         <xlsx.transformer.poi.version>4.1.2</xlsx.transformer.poi.version>
-        <protobuf.version>3.6.1</protobuf.version>
-        <proton.version>0.31.0</proton.version>
-        <qpid-jms.version>0.39.0</qpid-jms.version>
+        <protobuf.version>3.11.1</protobuf.version>
+        <proton.version>0.33.5</proton.version>
+        <qpid-jms.version>0.52.0</qpid-jms.version>
         <quartz.version>2.3.2</quartz.version>
         <require-css.version>0.1.10</require-css.version>
         <sardine.version>5.7</sardine.version>
@@ -420,6 +419,20 @@
                 <scope>import</scope>
                 <type>pom</type>
             </dependency>
+            <dependency>
+                <groupId>org.apache.camel</groupId>
+                <artifactId>camel-bom</artifactId>
+                <version>${camel.version}</version>
+                <scope>import</scope>
+                <type>pom</type>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.camel</groupId>
+                <artifactId>camel-karaf-bom</artifactId>
+                <version>${camel.version}</version>
+                <scope>import</scope>
+                <type>pom</type>
+            </dependency>
             <!-- END: BOMs -->
 
             <dependency>
@@ -451,6 +464,11 @@
                 <groupId>org.apache.shiro</groupId>
                 <artifactId>shiro-core</artifactId>
                 <version>${apache.shiro.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>commons-io</groupId>
+                <artifactId>commons-io</artifactId>
+                <version>${commons-io.version}</version>
             </dependency>
             <dependency>
                 <groupId>org.apache.commons</groupId>
