--- a/platform/email/platform-email-api/pom.xml
+++ b/platform/email/platform-email-api/pom.xml
@@ -25,9 +25,9 @@
 
     <dependencies>
         <dependency>
-            <groupId>javax.mail</groupId>
-            <artifactId>javax.mail-api</artifactId>
-            <version>${javax-mail.version}</version>
+            <groupId>jakarta.mail</groupId>
+            <artifactId>jakarta.mail-api</artifactId>
+            <version>${jakarta.mail.version}</version>
         </dependency>
     </dependencies>
 
