--- a/catalog/spatial/wfs/spatial-wfs-source/pom.xml
+++ b/catalog/spatial/wfs/spatial-wfs-source/pom.xml
@@ -51,7 +51,7 @@
         </dependency>
         <dependency>
             <groupId>org.apache.camel</groupId>
-            <artifactId>camel-context</artifactId>
+            <artifactId>camel-core-engine</artifactId>
         </dependency>
         <dependency>
             <groupId>org.apache.camel</groupId>
