--- a/distribution/test/itests/test-itests-kernel/pom.xml
+++ b/distribution/test/itests/test-itests-kernel/pom.xml
@@ -64,6 +64,11 @@
             <version>${project.version}</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.awaitility</groupId>
+            <artifactId>awaitility</artifactId>
+            <version>${awaitility.version}</version>
+        </dependency>
     </dependencies>
 
     <build>
