--- a/features/security/pom.xml
+++ b/features/security/pom.xml
@@ -318,8 +318,9 @@
         </dependency>
         <dependency>
             <groupId>com.sun.mail</groupId>
-            <artifactId>javax.mail</artifactId>
-            <version>${javax-mail-version}</version>
+            <artifactId>jakarta.mail</artifactId>
+            <version>${jakarta.mail.version}</version>
+            <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>ddf.platform.email</groupId>
