--- a/libs/httpproxy/proxy-camel-route/pom.xml
+++ b/libs/httpproxy/proxy-camel-route/pom.xml
@@ -30,43 +30,14 @@
         <dependency>
             <groupId>org.apache.camel</groupId>
             <artifactId>camel-http-common</artifactId>
-            <exclusions>
-                <exclusion>
-                    <groupId>${geronimo-servlet-api.group}</groupId>
-                    <artifactId>${geronimo-servlet-api.artifact}</artifactId>
-                </exclusion>
-            </exclusions>
         </dependency>
         <dependency>
             <groupId>org.apache.camel</groupId>
             <artifactId>camel-http</artifactId>
-            <exclusions>
-                <exclusion>
-                    <groupId>${geronimo-servlet-api.group}</groupId>
-                    <artifactId>${geronimo-servlet-api.artifact}</artifactId>
-                </exclusion>
-            </exclusions>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.camel</groupId>
-            <artifactId>camel-http4</artifactId>
         </dependency>
         <dependency>
             <groupId>org.apache.camel</groupId>
             <artifactId>camel-servlet</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.camel</groupId>
-            <artifactId>camel-core-osgi</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.osgi</groupId>
-            <artifactId>org.osgi.core</artifactId>
-            <scope>provided</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.osgi</groupId>
-            <artifactId>org.osgi.compendium</artifactId>
         </dependency>
         <dependency>
             <groupId>commons-lang</groupId>
@@ -81,6 +52,11 @@
             <groupId>com.google.code.findbugs</groupId>
             <artifactId>jsr305</artifactId>
         </dependency>
+        <dependency>
+            <groupId>commons-httpclient</groupId>
+            <artifactId>commons-httpclient</artifactId>
+            <version>3.1</version>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
@@ -93,13 +69,11 @@
                         <Import-Package>
                             org.apache.camel.component.http,
                             org.apache.camel.component.servlet,
-                            org.apache.camel.core.osgi,
                             javax.annotation;version="[1.2,2)",
                             *
                         </Import-Package>
                         <Export-Package>
                             org.apache.camel.component.servlet,
-                            org.apache.camel.core.osgi,
                             org.codice.proxy.http
                         </Export-Package>
                     </instructions>
