--- a/pom.xml
+++ b/pom.xml
@@ -183,7 +183,7 @@
         <cxf.version>3.4.0</cxf.version>
         <ddf-admin-ui.version>2.25.0</ddf-admin-ui.version>
         <decanter.version>1.3.0</decanter.version>
-        <dropwizard.version>3.2.6</dropwizard.version>
+        <dropwizard.version>4.1.12.1</dropwizard.version>
         <equinox.version>3.13.0</equinox.version>
         <felix.configadmin.version>1.9.16</felix.configadmin.version>
         <felix.coordinator.version>1.0.2</felix.coordinator.version>
@@ -430,7 +430,7 @@
                 <type>pom</type>
             </dependency>
             <dependency>
-                <groupId>org.apache.camel</groupId>
+                <groupId>org.apache.camel.karaf</groupId>
                 <artifactId>camel-karaf-bom</artifactId>
                 <version>${camel.version}</version>
                 <scope>import</scope>
