--- a/features/pom.xml
+++ b/features/pom.xml
@@ -51,13 +51,6 @@
         <c3p0-bundle-version>${c3p0.version}_1</c3p0-bundle-version>
         <caffeine-version>2.8.4</caffeine-version>
         <commons-codec-version>${commons-codec.version}</commons-codec-version>
-        <commons-io-version>${commons-io.version}</commons-io-version>
-        <commons-pool-version>${commons-pool.version}</commons-pool-version>
-        <freemarker-version>2.3.30</freemarker-version>
-        <geronimo-jms-spec-version>1.1.1</geronimo-jms-spec-version>
-        <geronimo-jms2-spec-version>${geronimo-jms_2_spec.version}</geronimo-jms2-spec-version>
-        <geronimo-jta-spec-version>1.1.1</geronimo-jta-spec-version>
-        <gson-version>2.8.5</gson-version>
         <hikaricp-version>2.4.13</hikaricp-version>
         <httpclient4-version>4.5.12</httpclient4-version>
         <httpcore4-version>4.4.13</httpcore4-version>
@@ -65,18 +58,8 @@
         <jakarta-mail-version>${jakarta.mail.version}</jakarta-mail-version>
         <javax-servlet-api-version>3.1.0</javax-servlet-api-version>
         <jodatime2-bundle-version>${joda-time.version}</jodatime2-bundle-version>
-        <junit-bundle-version>4.11_1</junit-bundle-version>
-        <metrics-version>${dropwizard.version}</metrics-version>
-        <netty-version>${netty.version}</netty-version>
-        <protobuf-guava-version>${guava.version}</protobuf-guava-version>
-        <protobuf-version>${protobuf.version}</protobuf-version>
-        <qpid-jms-client-version>${qpid-jms.version}</qpid-jms-client-version>
-        <qpid-proton-j-version>${proton.version}</qpid-proton-j-version>
         <quartz-version>${quartz.version}</quartz-version>
         <servicemix-specs-version>2.9.0</servicemix-specs-version>
-        <spring-version-range>[5,6)</spring-version-range>
-        <stax2v4-api-bundle-version>4.2</stax2v4-api-bundle-version>
-        <woodstox-core-version>${woodstox.core.version}</woodstox-core-version>
         <!-- END versions for camel features -->
 
         <!-- START versions for CXF features
@@ -102,7 +85,7 @@
         <cxf.dropwizard4.version>${dropwizard.version}</cxf.dropwizard4.version>
         <cxf.ehcache3.version>3.8.1</cxf.ehcache3.version>
         <cxf.geronimo.j2ee.management.version>1.0.1</cxf.geronimo.j2ee.management.version>
-        <cxf.geronimo.jms.version>${geronimo-jms-spec-version}</cxf.geronimo.jms.version>
+        <cxf.geronimo.jms.version>1.1.1</cxf.geronimo.jms.version>
         <cxf.geronimo.json.version>1.4</cxf.geronimo.json.version>
         <cxf.geronimo.jta.version>1.1.1</cxf.geronimo.jta.version>
         <!-- CXF Guava version must match DDF Guava version to avoid OSGi uses constraint violations -->
