--- a/catalog/plugin/catalog-plugin-metacardbackup-s3storage/pom.xml
+++ b/catalog/plugin/catalog-plugin-metacardbackup-s3storage/pom.xml
@@ -49,12 +49,10 @@
         <dependency>
             <groupId>org.apache.camel</groupId>
             <artifactId>camel-core</artifactId>
-            <version>${camel.version}</version>
         </dependency>
         <dependency>
             <groupId>org.apache.camel</groupId>
-            <artifactId>camel-aws</artifactId>
-            <version>${camel.version}</version>
+            <artifactId>camel-aws-s3</artifactId>
         </dependency>
         <dependency>
             <groupId>ddf.catalog.core</groupId>
