--- a/features/security/pom.xml
+++ b/features/security/pom.xml
@@ -59,16 +59,6 @@
             <version>${project.version}</version>
         </dependency>
         <dependency>
-            <groupId>org.codice.thirdparty</groupId>
-            <artifactId>commons-httpclient</artifactId>
-            <version>3.1.0_1</version>
-        </dependency>
-        <dependency>
-            <groupId>ddf.platform</groupId>
-            <artifactId>platform-http-proxy</artifactId>
-            <version>${project.version}</version>
-        </dependency>
-        <dependency>
             <groupId>ddf.security.interceptor</groupId>
             <artifactId>security-interceptor-logger</artifactId>
             <version>${project.version}</version>
@@ -318,8 +308,9 @@
         </dependency>
         <dependency>
             <groupId>com.sun.mail</groupId>
-            <artifactId>javax.mail</artifactId>
-            <version>${javax-mail-version}</version>
+            <artifactId>jakarta.mail</artifactId>
+            <version>${jakarta.mail.version}</version>
+            <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>ddf.platform.email</groupId>
